# lib/helper/ResourceHelper.js
@@ -1,6 +1,7 @@
 const parse = require('csv-parse');
 const conv = require('iconv-lite');
 const http = require('http');
+const ingredients = require('./Ingredients.json');
 
 const ItemModel = require('../models/Item');
 
@@ -81,13 +82,17 @@ function parseDay(value) {
 }
 
 function parseIngredients(value) {
-  let ingredients = [];
+  const ingredientsArr = [];
 
   const rawIngredients = value.match(/(?=\().+?(?:\))/);
   if (rawIngredients && rawIngredients[0]) {
-    ingredients = rawIngredients[0].replace(/[{()}]/g, '').split(',');
+    // for each ingredient key
+    rawIngredients[0].replace(/[{()}]/g, '').split(',').forEach((key) => {
+      ingredientsArr.push(ingredients.filter(ingredient => ingredient.key === key));
+    });
   }
-  return ingredients;
+
+  return ingredientsArr;
 }
 
 function parseItemFromEntry(item) {
